changes  in user model