@@ -6,10 +6,11 @@ import com.foodsquad.FoodSquad.model.entity.User;
 import com.foodsquad.FoodSquad.model.entity.UserRole;
 import com.foodsquad.FoodSquad.repository.OrderRepository;
 import com.foodsquad.FoodSquad.repository.UserRepository;
+import com.foodsquad.FoodSquad.service.declaration.UserService;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -24,31 +25,34 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
-public class UserService {
-    @Autowired
-    private UserRepository userRepository;
+@RequiredArgsConstructor
+public class UserServiceImpl  implements UserService {
 
-    @Autowired
-    private ModelMapper modelMapper;
+    private final  UserRepository userRepository;
 
-    @Autowired
-    private OrderRepository orderRepository;
+    private  final  ModelMapper modelMapper;
+
+
+    private  final  OrderRepository orderRepository;
 
     private User getCurrentUser() {
+
         UserDetails userDetails = (UserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         return userRepository.findByEmail(userDetails.getUsername())
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
     }
 
     private void checkOwnership(String userId) {
+
         User currentUser = getCurrentUser();
         if (!currentUser.getId().equals(userId) && !currentUser.getRole().equals(UserRole.ADMIN) && !currentUser.getRole().equals(UserRole.MODERATOR)) {
             throw new IllegalArgumentException("Access denied");
         }
     }
 
-
+   @Override
     public List<UserResponseDTO> getAllUsers(int page, int size) {
+
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdOn"));
         Page<User> userPage = userRepository.findAll(pageable);
         return userPage.stream()
@@ -58,10 +62,11 @@ public class UserService {
                     userResponseDTO.setOrdersCount(ordersCount);
                     return userResponseDTO;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
-
+  @Override
     public ResponseEntity<UserResponseDTO> getUserById(String id) {
+
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("User not found for ID: " + id));
         long ordersCount = orderRepository.countByUserId(id);
@@ -72,9 +77,9 @@ public class UserService {
 
     @Transactional
     public ResponseEntity<UserResponseDTO> updateUser(String id, UserUpdateDTO userUpdateDTO) {
+
         User currentUser = getCurrentUser();
         checkOwnership(id);
-        // Check if the current user is trying to update their own role
         if (currentUser.getId().equals(id) && !currentUser.getRole().name().equals(userUpdateDTO.getRole())) {
             throw new IllegalArgumentException("Users cannot update their own role.");
         }
@@ -82,7 +87,7 @@ public class UserService {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("User not found for ID: " + id));
 
-        // Check if the current user is a normal user and is trying to change the role to something other than NORMAL
+
         if (currentUser.getRole().equals(UserRole.NORMAL) && !userUpdateDTO.getRole().equals(UserRole.NORMAL.name())) {
             throw new IllegalArgumentException("Normal users cannot change roles.");
         }
@@ -111,13 +116,13 @@ public class UserService {
 
     @Transactional
     public ResponseEntity<Map<String, String>> deleteUser(String id) {
+
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("User not found for ID: " + id));
         if (user.getRole().equals(UserRole.ADMIN)) {
             throw new IllegalArgumentException("Admin users cannot be deleted.");
         }
 
-        // Delete menu item references in order_menu_item (w/o this foreign key table error appears)
         user.getMenuItems().forEach(menuItem -> {
             orderRepository.removeMenuItemReferences(menuItem.getId());
         });
@@ -125,4 +130,5 @@ public class UserService {
         userRepository.delete(user);
         return ResponseEntity.ok(Map.of("message", "User successfully deleted."));
     }
+
 }
